--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#home">GRU!</a>
+        <a class="navbar-brand" href="#home">Ambr Studios</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
                     <img src="img/code.png" class="media-object">
                 </div>
                 <div class="media-body align-self-center">
-                    <h4 class="media-heading">0</h4>
+                    <h4 class="media-heading">530</h4>
                     <p>Lines of code written</p>
                 </div>
             </div>
@@ -104,55 +104,9 @@
         </div>
     </div>
 
-    <div id="team" class="container-fluid team">
-        <div class="row title">
-            <div class="col-12 col-centered ">
-                <h2>Our team</h2>
-            </div>
-        </div>
+   
 
-        <div class="container-fluid d-flex justify-content-center">
-            <div class="row cards align-items-center ">
-
-                <div class="col-4 mx-auto">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="img/first.png" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">WHITNESSHERO</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 mx-auto">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="img/second.png" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">KRANZ</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 mx-auto">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="img/third.png" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">RANDOM TYAN</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+                        
 
 
     <div class="footer container-fluid">
